--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -64,6 +64,7 @@
         <span id="formMessage" class="ml-4 text-sm"></span>
         <%= form_with url: waitlist_path, method: :post, local: false, id: 'waitlistForm', class: "w-full lg:pt-6 pb-2 mb-4" do |f| %>
         <div class="mb-2 flex flex-col md:flex-row items-center">
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
           <%= f.email_field :email, 
                 class: "shadow appearance-none mb-4 w-full md:w-3/5 border rounded p-2 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out mb-2 md:mb-0 md:mr-2",
                 placeholder: "you@somewhere.com" %>
@@ -103,7 +104,7 @@
       fetch(form.action, {
           method: 'POST',
           headers: {
-            'X-CSRF-Token': document.querySelector('meta[name="csrf-token"]').content,
+            'X-CSRF-Token': document.querySelector('input[name="authenticity_token"]').value,
             'Accept': 'application/json',
           },
           body: formData
